--- a/examples/roles/pfsense_setup/tasks/main.yml
+++ b/examples/roles/pfsense_setup/tasks/main.yml
@@ -94,4 +94,4 @@
       content: |
         %Domain\ Admins             ALL=(ALL) NOPASSWD: ALL
 
-  tags: pfsensible.core.setup
+  tags: pfsense_setup
